--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:11.8.0'
     compile 'com.google.android.gms:play-services-auth:11.8.0'
     compile 'com.google.firebase:firebase-firestore:11.8.0'
+    compile 'com.firebaseui:firebase-ui-auth:3.2.2'
+
+    // Required only if Facebook login support is required
 
 
 }
