Working sketchy version of welcomeActivity
Need to create a proper flow

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,8 +43,9 @@
         <activity android:name=".BaseActivity" />
         <activity
             android:name=".LoginActivity"
-            android:label="@string/sign_in"></activity>
-        <activity android:name=".ForgotPasswordActivity"></activity>
+            android:label="@string/sign_in" />
+        <activity android:name=".ForgotPasswordActivity" />
+        <activity android:name=".WelcomeActivity"></activity>
     </application>
 
 </manifest>
