--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,14 @@
         <activity android:name=".ProfileActivity" />
         <activity android:name=".TeamActivity" />
         <activity android:name=".CreateNewTeamActivity" />
-        <activity android:name=".SearchActivity"></activity>
+        <activity android:name=".SearchActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
+        </activity>
+
     </application>
 
 </manifest>
