--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     implementation "com.firebaseui:firebase-ui-firestore:3.0.0"
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    compile 'de.hdodenhof:circleimageview:1.2.1'
+    compile 'joda-time:joda-time:2.9.9'
+
 
     // Required only if Facebook login support is required
 
