--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,25 +39,49 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ExploreActivity" />
         </activity>
-        <activity android:name=".ExploreActivity" />
+        <activity android:name=".ExploreActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".FeedActivity" />
+        </activity>
         <activity android:name=".SignUpActivity" />
         <activity
             android:name=".SignInActivity"
             android:label="@string/sign_in" />
         <activity android:name=".ForgotPasswordActivity" />
         <activity android:name=".ProfileActivity" />
-        <activity android:name=".TeamActivity" />
-        <activity android:name=".CreateNewTeamActivity" />
-        <activity android:name=".SearchActivity">
+        <activity android:name=".TeamActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".FeedActivity" />
+        </activity>
+        <activity android:name=".CreateNewTeamActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".TeamActivity" />
+        </activity>
+        <activity
+            android:name=".SearchActivity"
+            android:label="@string/search_hint">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
 
             <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".TeamActivity" />
+            <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        <activity android:name=".DetailTeamActivity"></activity>
+        <activity
+            android:name=".DetailTeamActivity"
+            android:label="test">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".SearchActivity" />
+        </activity>
+        <activity android:name=".DetailUserActivity"></activity>
     </application>
 
 </manifest>
