--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".FeedActivity" />
         </activity>
-        <activity android:name=".SignUpActivity" />
+        <activity android:name=".SignUpActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".SignInActivity"
             android:label="@string/sign_in" />
@@ -83,7 +84,6 @@
         </activity>
         <activity android:name=".DetailUserActivity" />
         <activity android:name=".FriendListActivity" />
-        <activity android:name=".SetDisplayNameActivity"></activity>
     </application>
 
 </manifest>
