--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,15 +37,11 @@
         <activity android:name=".DetailFieldActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ExploreActivity" />
+                android:value=".SearchActivity" />
         </activity>
-        <activity android:name=".ExploreActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".FeedActivity" />
-        </activity>
-        <activity android:name=".SignUpActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".SignUpActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".SignInActivity"
             android:label="@string/sign_in" />
@@ -84,6 +80,7 @@
         </activity>
         <activity android:name=".DetailUserActivity" />
         <activity android:name=".FriendListActivity" />
+        <activity android:name=".EditProfileActivity"></activity>
     </application>
 
 </manifest>
