Completed profile and frame for new field activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,7 +80,13 @@
         </activity>
         <activity android:name=".DetailUserActivity" />
         <activity android:name=".FriendListActivity" />
-        <activity android:name=".EditProfileActivity"></activity>
+        <activity android:name=".EditProfileActivity" />
+        <activity android:name=".CustomizeProfileActivity" />
+        <activity android:name=".ReputationActivity" />
+        <activity android:name=".ChallengesActivity" />
+        <activity android:name=".BadgesActivity" />
+        <activity android:name=".FieldsPlusStartActivity" />
+        <activity android:name=".CreateNewFieldActivity"></activity>
     </application>
 
 </manifest>
