--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,6 @@ dependencies {
     implementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation 'com.google.android.gms:play-services-maps:12.0.1'
-    implementation 'com.google.android.gms:play-services-places:12.0.1'
-    implementation 'com.google.android.gms:play-services-location:12.0.1'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
@@ -41,13 +38,17 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:12.0.1'
     implementation 'com.google.android.gms:play-services-auth:12.0.1'
     implementation 'com.google.firebase:firebase-firestore:12.0.1'
-    implementation 'com.firebaseui:firebase-ui-auth:3.2.2'
+    implementation 'com.firebaseui:firebase-ui-auth:3.3.0'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
-    implementation "com.firebaseui:firebase-ui-firestore:3.0.0"
+    implementation "com.firebaseui:firebase-ui:3.3.0"
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'de.hdodenhof:circleimageview:1.2.1'
+    implementation 'com.firebaseui:firebase-ui-storage:3.3.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+
 
 
 }
