--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
         <activity android:name=".DetailFieldActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SearchActivity" />
+                android:value=".SearchActivity"
+                />
         </activity>
         <activity
             android:name=".SignUpActivity"
@@ -86,7 +87,8 @@
         <activity android:name=".ChallengesActivity" />
         <activity android:name=".BadgesActivity" />
         <activity android:name=".FieldsPlusStartActivity" />
-        <activity android:name=".CreateNewFieldActivity"></activity>
+        <activity android:name=".CreateNewFieldActivity" />
+        <activity android:name=".EditFieldActivity"></activity>
     </application>
 
 </manifest>
