--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,11 +21,11 @@ android {
 
 dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:support-vector-drawable:26.1.0'
     implementation 'com.google.firebase:firebase-auth:12.0.1'
-    implementation 'com.android.support:support-annotations:27.1.0'
+    implementation 'com.android.support:support-annotations:27.1.1'
     implementation 'com.google.firebase:firebase-storage:12.0.1'
     implementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -46,7 +46,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'de.hdodenhof:circleimageview:1.2.1'
     implementation 'com.firebaseui:firebase-ui-storage:3.3.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation "com.android.support:support-compat:26.1.0"
 
 
 }
