--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:value="AIzaSyA_hHmSEbDgLAD4aWne7_4pklPV7XsXQDg" />
 
         <activity
-            android:name=".FeedActivity"
+            android:name=".NewEventActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -89,7 +89,10 @@
         <activity android:name=".CreateNewFieldActivity" />
         <activity android:name=".EditFieldActivity" />
         <activity android:name=".TrainingActivity" />
-        <activity android:name=".TrainingSummaryActivity"></activity>
+        <activity android:name=".TrainingSummaryActivity" />
+        <activity android:name=".NoTeamActivity" />
+        <activity android:name=".FeedActivity" />
+        <activity android:name=".SearchFieldOnlyActivity"></activity>
     </application>
 
 </manifest>
