--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,7 +92,8 @@
         <activity android:name=".TrainingSummaryActivity" />
         <activity android:name=".NoTeamActivity" />
         <activity android:name=".NewEventActivity" />
-        <activity android:name=".SearchFieldOnlyActivity"></activity>
+        <activity android:name=".SearchFieldOnlyActivity" />
+        <activity android:name=".DetailEventActivity"></activity>
     </application>
 
 </manifest>
