--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -41,13 +45,11 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:3.3.0'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
-    implementation "com.firebaseui:firebase-ui:3.3.0"
+    implementation 'com.firebaseui:firebase-ui:3.3.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'de.hdodenhof:circleimageview:1.2.1'
     implementation 'com.firebaseui:firebase-ui-storage:3.3.0'
-    implementation "com.android.support:support-compat:26.1.0"
-
-
+    implementation 'com.android.support:support-compat:26.1.0'
 }
 apply plugin: 'com.google.gms.google-services'
