--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,6 +94,8 @@
         <activity android:name=".DetailEventActivity" />
         <activity android:name=".PendingPlayerActivity" />
         <activity android:name=".UserChatActivity" />
+        <activity android:name=".AllTrainingsActivity" />
+        <activity android:name=".SettingsActivity"></activity>
     </application>
 
 </manifest>
