--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher_new"
+        android:icon="@mipmap/ic_launcher_fields"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_new_round"
+        android:roundIcon="@mipmap/ic_launcher_fields_round"
         android:supportsRtl="true"
-        android:theme="@style/FieldsTheme">
+        android:theme="@style/FieldsThemeAppCompat">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyA_hHmSEbDgLAD4aWne7_4pklPV7XsXQDg" />
@@ -47,10 +47,13 @@
             android:label="@string/sign_in" />
         <activity android:name=".ForgotPasswordActivity" />
         <activity android:name=".ProfileActivity" />
-        <activity android:name=".TeamActivity">
+        <activity android:name=".TeamActivity"
+            android:screenOrientation="portrait"
+            >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".FeedActivity" />
+                android:value=".FeedActivity"
+                />
         </activity>
         <activity android:name=".CreateNewTeamActivity">
             <meta-data
@@ -88,7 +91,14 @@
         <activity android:name=".EditFieldActivity" />
         <activity android:name=".TrainingActivity" />
         <activity android:name=".TrainingSummaryActivity" />
-        <activity android:name=".NoTeamActivity" />
+        <activity android:name=".NoTeamActivity"
+            android:screenOrientation="portrait"
+            >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".FeedActivity"
+                />
+        </activity>
         <activity android:name=".NewEventActivity" />
         <activity android:name=".SearchFieldOnlyActivity" />
         <activity android:name=".DetailEventActivity" />
@@ -98,7 +108,8 @@
         <activity android:name=".SettingsActivity" />
         <activity android:name=".PlayerCountActivity" />
         <activity android:name=".TeamChatActivity" />
-        <activity android:name=".EditTeamActivity"></activity>
+        <activity android:name=".EditTeamActivity" />
+        <activity android:name=".WelcomeActivity"></activity>
     </application>
 
 </manifest>
