--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,14 +128,18 @@
         </activity>
         <activity android:name=".UserChatActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name=".AllTrainingsActivity"
-            android:screenOrientation="portrait"/>
         <activity android:name=".SettingsActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".PlayerCountActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".TeamChatActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".TeamActivity"
+                />
+        </activity>
         <activity android:name=".EditTeamActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".WelcomeActivity"
