--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,14 +57,9 @@
         <activity
             android:name=".SearchActivity"
             android:label="@string/search_hint"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
-
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".TeamActivity" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing"
+            >
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
