--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:1.2.1'
     implementation 'com.firebaseui:firebase-ui-storage:3.3.0'
     implementation 'com.android.support:support-compat:27.1.1'
+    implementation 'com.android.billingclient:billing:1.1'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
