--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,10 @@
             android:value="AIzaSyA_hHmSEbDgLAD4aWne7_4pklPV7XsXQDg" />
 
         <activity
-            android:name=".FeedActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:name=".WelcomeActivity"
+            android:theme="@style/AppTheme.Launcher"
+
+        android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -59,8 +60,7 @@
             android:name=".SearchActivity"
             android:label="@string/search_hint"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustNothing"
-            >
+            android:windowSoftInputMode="adjustNothing">
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
@@ -92,9 +92,6 @@
         </activity>
         <activity
             android:name=".ReputationActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".FieldsPlusStartActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".CreateNewFieldActivity"
@@ -164,12 +161,21 @@
                 android:value=".TeamActivity" />
         </activity>
         <activity
-            android:name=".WelcomeActivity"
-            android:screenOrientation="portrait" />
-        <activity android:name=".TeamPlayersActivity" />
-        <activity android:name=".ChangePasswordActivity" />
-        <activity android:name=".AllTrainingsActivity"
-            android:screenOrientation="portrait">
+            android:name=".FeedActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity android:name=".TeamPlayersActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity android:name=".ChangePasswordActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity
+            android:name=".AllTrainingsActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".FieldsPlusStartActivity"
+            android:screenOrientation="portrait"
+            >
 
         </activity>
     </application>
