--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,26 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'Fields'
+            keyPassword 'Erkki112'
+            storeFile file('/Users/ollitoivanen/Desktop/key')
+            storePassword 'Erkki112'
+        }
+    }
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.fields.curiumx.fields"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
-            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -24,7 +31,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:support-vector-drawable:27.1.1'
@@ -48,7 +55,6 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-storage:3.3.0'
     implementation 'com.android.support:support-compat:27.1.1'
     implementation 'com.android.billingclient:billing:1.1'
-
 
 }
 apply plugin: 'com.google.gms.google-services'
