Revert "before alpha launch"
This reverts commit cf8c9bf74430cea84035dfe072caac4e66da4cf8.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fields.curiumx.fields">
-    <uses-permission android:name="com.android.vending.BILLING" />
-
 
     <application
         android:allowBackup="true"
@@ -21,15 +19,12 @@
 
         android:screenOrientation="portrait">
             <intent-filter>
-
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailFieldActivity"
-            android:screenOrientation="portrait"
-            >
+        <activity android:name=".DetailFieldActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".SearchActivity" />
