--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         applicationId "com.fields.curiumx.fields"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 2
+        versionCode 3
         versionName "1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
@@ -54,7 +54,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:1.2.1'
     implementation 'com.firebaseui:firebase-ui-storage:3.3.0'
     implementation 'com.android.support:support-compat:27.1.1'
-    implementation 'com.android.billingclient:billing:1.1'
+    implementation 'com.anjlab.android.iab.v3:library:1.0.44'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
