completed favorite fields and fixed glide bug!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fields.curiumx.fields">
-    <uses-permission android:name="com.android.vending.BILLING" />
 
+    <uses-permission android:name="com.android.vending.BILLING" />
 
     <application
         android:allowBackup="true"
@@ -17,19 +17,17 @@
 
         <activity
             android:name=".WelcomeActivity"
-            android:theme="@style/AppTheme.Launcher"
-
-        android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.Launcher">
             <intent-filter>
-
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailFieldActivity"
-            android:screenOrientation="portrait"
-            >
+        <activity
+            android:name=".DetailFieldActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".SearchActivity" />
@@ -168,22 +166,20 @@
         </activity>
         <activity
             android:name=".FeedActivity"
-            android:screenOrientation="portrait"
-            />
-        <activity android:name=".TeamPlayersActivity"
-            android:screenOrientation="portrait"
-            />
-        <activity android:name=".ChangePasswordActivity"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".TeamPlayersActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ChangePasswordActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".AllTrainingsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".FieldsPlusStartActivity"
             android:screenOrientation="portrait"></activity>
-        <activity android:name=".FieldsPlusStartActivity"
-            android:screenOrientation="portrait"
-            >
-
-        </activity>
+        <activity android:name=".FavoriteFieldsActivity"></activity>
     </application>
 
 </manifest>
